# gtcrn

./: .gitignore  infer.py
Cdeploy/: CMakeLists.txt  main.c
Cdeploy/include/: onnx_inference.h
Cdeploy/src/: onnx_inference.c
